# autoreport

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  devlog-v0.2.1.md  pyproject.toml  run-debug.cmd  run-public.cmd  run_manual_ai_regression.ps1  run_manual_ai_release_gate.ps1
autoreport/: __init__.py  cli.py  loader.py  models.py  template_flow.py  validator.py
autoreport/engine/: __init__.py  generator.py
autoreport/outputs/: __init__.py  errors.py  pptx_writer.py
docs/: release-readiness.md
examples/: autoreport_editorial_authoring_payload.yaml  autoreport_editorial_report_content.yaml  autoreport_editorial_report_payload.yaml  autoreport_editorial_template_contract.yaml  autoreport_manual_authoring_payload.yaml  autoreport_manual_report_content.yaml  autoreport_manual_template_contract.yaml  autoreport_website_intro_report_content.yaml  autoreport_website_visual_report_content.yaml  report_payload.json  report_payload.yaml  weekly_report.yaml
tests/: test_autofill.py  test_autorelease_handoff.py  test_branch_commit_guard.py  test_cli.py  test_generator.py  test_loader.py  test_manual_ai_yaml.py  test_pptx_writer.py  test_pptxgenjs_image_placeholder_followup.py  test_pptxgenjs_reference_design.py  test_pptxgenjs_template_spike.py  test_public_web_playwright.py  test_v04_prototype_scaffolds.py  test_validator.py  test_verif_test.py  test_web_app.py  test_web_debug_app.py  test_web_serve.py  test_workflow_automation_reporting.py  test_workflow_automation_sandbox.py  test_workflow_automation_spike.py  test_workstream_orchestrator.py
(+179 files in other folders)
